Split canvas.ts

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>ts_template</title>
+    <title>DrawApp</title>
     </head>
 
   <body></body>
